styles.css
body {
    margin: 0;
    --main-bg-color: #333D79FF;
    --second-bg-color: wheat;
    background-color: #FAEBEFFF;
    padding: 10px;
    font-family: "Segoe UI", serif;
}

h1 {
    color: var(--main-bg-color);
    font-weight: bold;
    margin: 0;
}

#file-input {
    display: none;
}

#upload-armor {
    display: none;
}

.dimension {
    display: flex;
    flex-direction: row;
}

.dimension-tip {
    background-color: rgba(183, 182, 182, 0.47);
    width: 20px;
    height: 20px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 10px;
    transition: 200ms all;
    cursor: pointer;
}

#analytics-mode {
    background-color: white;
    color: var(--main-bg-color);
}

#analytics-mode, #monte-carlo-mode, #other-mode {
    transition: 200ms all;
}

#analytics-plots {
    display: flex;
    flex-direction: column;
}

#monte-carlo-plots {
    display: flex;
    flex-direction: row;
}

.dimension-tip:hover {
    background-color: #b7b6b6;
}

hr {
    width: 100%;
}

h3 {
    margin: 10px 0 10px 0;
}

#simulation {
    background-color: white;
    color: var(--main-bg-color);
    border-radius: 3px;
    transition: 200ms all;
}
#simulation:hover {
    background-color: #b7b6b6;
}

#loader {
    display: none;
}


.armor-info {
    width: 200px;
    height: 160px;
    margin-left: 40px;
    border-radius: 5px;
    padding: 5px;
    border: 1px solid #ffffff;
    opacity: 0;
}

#probability-table {
    width: 200px;
    height: 300px;
    margin-left: 40px;
    border-radius: 5px;
    padding: 5px;
    color: white;

}

.armor-info-table {
    color: white;
    display: flex;
    align-items: center;
    flex-direction: column;
}


.input-distance {
    width: 70%;
    border-radius: 5px;
    padding: 5px;
}

.inputs {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;

}

.distance-input {
    width: 400px;
    height: 250px;
    padding: 10px;
    color: white;
    box-sizing: border-box;
    border-radius: 5px;
    background-color: var(--main-bg-color);
    display: flex;
    flex-direction: column;
}


#plotly3d {
    width: 400px;
    height: 500px;
}


.buttons {
    display: flex;
    flex-direction: column;
    width: auto;
    justify-content: space-between;
    align-items: center;
    height: 500px;
}

.console {
    background-color: white;
    color: var(--main-bg-color);
    border-radius: 5px;
    transition: 200ms;
    margin-top: 30px;
}

.console:hover {
    background-color: #b7b6b6;
}

#monte-carlo-plots {
    display: none;
}


.target-div-wrapper {
    position: relative;
    border-radius: 5px;
    display: flex;
    flex-direction: row;
}

button, .upload_label {
    background-color: var(--main-bg-color);
    font-size: 14px;
    padding: 0;
    border-radius: 5px 0 0 5px;

    border: 0;
    color: white;
    height: 30px;
    min-width: 130px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    font-family: Arial;
}

.upload_label {
    margin: 0;
}


.dot {
    width: 5px;
    height: 5px;
    background-color: black;
    position: absolute;
    border-radius: 50%;
}

sub {
    font-size: 8px;
}



button:hover, .upload_label:hover {
    background: rgba(39,39,147,0.78);
}

#topRight {
   display: none;
}

.armor-input {
    width: 40px;
    padding: 3px;
    outline: none;
    border: none;
    border-radius: 5px;
    font-size: 16px;
}

.radius-div {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10px;
}


.test-wrapper {
    display: flex;
    flex-direction: row;
    margin-left: 10px;
    justify-content: flex-start;
    position: relative;
    /*border: 1px solid red;*/
}

.gradient-wrapper {
    display: flex;
    flex-direction: row;
    width: 120px;
    border: 1px solid red;

}

.list {
    width: 130px;
    height: auto;
    overflow-y: scroll;
    /*background-color: rgba(10, 10, 44, 0.78);*/
}

.list::-webkit-scrollbar {
    display: none;
}

.listItem {
    background-color: var(--main-bg-color);
    height: 30px;
    min-width: 130px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    border-radius: 0 5px 5px 0;
    font-size: 14px;
    cursor: pointer;
    transition: 200ms background-color;
}


.gradient {
    height: 370px;
    width: 10px;
    background: linear-gradient(red,yellow, #02ff02);
    border: 5px solid var(--main-bg-color);
}

.gradient-wrapper:hover .gradient-values {
    opacity: 1;
    margin-left: 5px;
}

.gradient-values {
    opacity: 0;
    height: 400px;
    width: 50px;
    margin-left: 0;
    transition: 200ms all;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    font-size: 18px;
    font-weight: bold;
}

.plot {
    width: 500px;
    height: 300px;
    background-color: white;
    padding-right: 10px;
    border-radius: 10px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

.test-container {
    width: 600px;
    border: 5px solid var(--main-bg-color);
    border-radius: 0 0 0 0;
    display: flex;
    flex-direction: column;
    position: relative;
    transition: 300ms all;
}

.image-content-section {
    width: 100%;
    height: 100%;
}

.test {
    display: flex;
    justify-content: center;
    align-items: center;

    font-size: 20px;

}


.tank_image {
    width: 100%;
    height: 100%;
}

.test-img-wrapper {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;

    display: flex;
    justify-content: center;
    align-items: center;
}

.test {
    width: 100%;
    height: 100%;
    position: relative;
    object-fit: cover;
    background-size: contain;
    background-repeat: no-repeat;
}

.content {
    background-color: rgba(0, 255, 0, 0.7);
    border: 1px solid red;
    position: absolute;
    width: 200px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 200ms background-color;
    font-family: initial;

}

.content:hover .dragHeader {
    opacity: 1;
}

.contentValue:hover .delta {
    width: 35px;
}

.index {
    font-size: 10px;
}

.contentValue {
    color: white;
    font-size: 22px;
    font-weight: bold;
    transition: 200ms all;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.input {
    display: none;
    width: 30px;
    font-size: 18px;
    border: 0;
    background-color: #a90808;
    outline: none;
    border-radius: 5px;
    color: white;
    font-weight: bold;
}

.inputShow {
    display: block;
}

.delta {
    overflow: hidden;
    max-height: 20px;
    width: 0;
    display: block;
    transition: 200ms all;
}

.value {
    margin: 0 2px;
}

.valueHide {
    display: none;
}



.dragHeader {
    opacity: 0;
    width: 40px;
    height: 20px;
    background-color: rgb(255, 255, 255);
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    /*margin-left: auto;*/
    margin-right: auto;
    cursor: move;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    transition: 200ms all;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding: 0 10px;
    box-sizing: border-box;
}

.dragHeaderCircle {
    width: 5px;
    height: 5px;
    border-radius: 50%;
    background-color: #b7b6b6;
}



.hit-stat {
    /*display: flex;*/
    flex-direction: row;
    align-items: center;
    background-color: var(--main-bg-color);
    padding: 10px 10px;
    display: none;
}

.target-div {
    width: 300px;
    height: 250px;
    margin-left: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    border-radius: 10px;
}

.target {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid red;
    background-color: transparent;
    cursor: move;
    overflow: hidden;
    position: absolute;
    top: 660px;
    left: 150px;
    opacity: 0;
}

.target-cross {
    font-size: 30px;
    color: red;
    font-weight: bold;
}

#target-sigma1 {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80px;
    height: 80px;
    background-color: rgba(34, 238, 238, 0.56);
    border-radius: 50%;
    z-index: 100;
}

#target-sigma2 {
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 160px;
    height: 160px;
    background-color: rgba(90, 209, 253, 0.56);
    border-radius: 50%;
}




.parameters {
    width: 300px;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-start;
    color: white;
    font-weight: bold;
    font-size: 18px;
}

.parameter-section {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-bottom: 10px
}

label {
    margin-bottom: 10px;
}

.parameter {
    width: 70%;
    padding: 5px;
    border-radius: 5px;
    border: 0;
    outline: none;
    font-size: 18px;
}

.parameter-list {
    background-color: var(--main-bg-color);
    margin-right: 10px;
    border-radius: 5px;
    box-sizing: content-box;
    padding: 20px 0 0 20px;

}

#plotlyDiv, #plotlyDiv2d, #monte-carlo-3d, #monte-carlo-2d {
    width: 500px;
    height: 500px;
    overflow: hidden;
    border-radius: 5px;
    margin: 10px 0 0 10px;
}

.tab {
    width: auto;
    padding: 0 5px 0 5px;
    border-radius: 3px 3px 0 0;
    margin-right: 7px;
    border: 1px solid var(--main-bg-color);
}

.tabs {
    display: flex;
    flex-direction: row;
}

.stat {
    background-color: var(--main-bg-color);
    padding: 10px;
    width: 100%;
}

.target-buttons {
    display: flex;
    flex-direction: column;
    border-radius: 3px;
    border: 1px solid white;
    margin-left: 30px;
}

.target-control {
    transition: 200ms all;
}

.target-control:hover {
    background-color: white;
    color: var(--main-bg-color)
}

.additional-parameters {
    height: 500px;
    width: 300px;
    margin-top: 10px;
}

.obstacle-content {
    background-color: rgba(147, 28, 12, 0.66);
    position: absolute;
    width: 75px;
    z-index: 10000;
}

.obstacle-wrapper {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

.tip {
    color: white;
    margin-left: 10px;
    height: 50px;
    width: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.plot-wrapper {
    display: flex;
    flex-direction: row;
}

